// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-tooltip #remove should remove component as expected (1) 1`] = `
<body>
  <div>
    <div>
      Element
    </div>
  </div>
</body>
`;

exports[`gux-tooltip #remove should remove component as expected (2) 1`] = `
<body>
  <div>
    <div id="element">
      Element
    </div>
  </div>
</body>
`;

exports[`gux-tooltip #render should render component as expected (1) 1`] = `
<body>
  <div aria-describedby="gux-tooltip-i">
    <div>
      Element
    </div>
    <gux-tooltip id="gux-tooltip-i" role="tooltip">
      <mock:shadow-root>
        <div class="gux-container gux-light" data-placement="bottom-start">
          <slot></slot>
        </div>
      </mock:shadow-root>
      Tooltip
    </gux-tooltip>
  </div>
</body>
`;

exports[`gux-tooltip #render should render component as expected (2) 1`] = `
<body>
  <div>
    <div aria-describedby="gux-tooltip-i" id="element">
      Element
    </div>
    <gux-tooltip for="element" id="gux-tooltip-i" role="tooltip">
      <mock:shadow-root>
        <div class="gux-container gux-light" data-placement="bottom-start">
          <slot></slot>
        </div>
      </mock:shadow-root>
      Tooltip
    </gux-tooltip>
  </div>
</body>
`;
